# p2p-messenger

./: .gitignore  Cargo.toml  sequence-diagram.txt
src/: main.rs  request.rs
src/actor/: actor.rs  address.rs  envelope.rs  mod.rs  request.rs
src/actors/: actor.rs  client_handler.rs  client_handler_actor.rs  listener.rs  listener_actor.rs  mod.rs  state_handler.rs  state_handler_actor.rs  ui_handler.rs  ui_handler_actor.rs
src/objects/: group.rs  message.rs  mod.rs  peer.rs  user.rs
src/remote/: mod.rs
src/request/: internal_request.rs  mod.rs  remote_request.rs
