[package]
name = "pourquoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.15.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
