[package]
name = "pourquoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
crossbeam = "0.8.1"
crossterm = "0.22.1"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.15.0", features = ["full"] }
tui = "0.17.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
